<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <Button
            android:id="@+id/add_10_minutes"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/add_10" />

        <Button
            android:id="@+id/add_1_minute"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/add_1"/>

        <Button
            android:id="@+id/add_10_seconds"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/add_10"/>

        <Button
            android:id="@+id/add_1_second"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:text="@string/add_1" />

        <TextView
            android:id="@+id/minute_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/default_clock_value"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/minute_digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/default_clock_value"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/separator"
            android:textAlignment="center"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/second_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/default_clock_value"
            android:textAlignment="center"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/second_digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/default_clock_value"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sub_10_minutes"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/minus_10" />

        <Button
            android:id="@+id/sub_1_minute"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/minus_1" />

        <Button
            android:id="@+id/sub_10_seconds"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/minus_10"/>

        <Button
            android:id="@+id/sub_1_second"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:text="@string/minus_1"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.8">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>